# sequoia2

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Containerfile  Dockerfile  LICENSE.txt  NEWS  README.md  build.rs  deny.toml  openpgp-policy.toml  sq-subplot.md  sq.subplot
.ci/: all_commits.sh
src/: commands.rs  common.rs  compat.rs  config.rs  log.rs  macros.rs  main.rs  man-pandoc.inc.html  man-pandoc.lua  man.rs  output.rs  sq.rs  toml_edit_tree.rs  utils.rs
src/cli/: armor.rs  autocrypt.rs  cert.rs  certify.rs  config.rs  dane.rs  dearmor.rs  decrypt.rs  download.rs  encrypt.rs  examples.rs  inspect.rs  key.rs  keyring.rs  keyserver.rs  link.rs  lookup.rs  mod.rs  network.rs  output.rs  packet.rs  pki.rs  sign.rs  toolbox.rs  types.rs  verify.rs  version.rs  wkd.rs  wot.rs
src/cli/cert/: export.rs  import.rs  lint.rs  list.rs
src/cli/config/: get.rs  inspect.rs  set.rs  template.rs
src/cli/key/: approvals.rs  delete.rs  expire.rs  export.rs  generate.rs  import.rs  list.rs  password.rs  revoke.rs  rotate.rs  subkey.rs  userid.rs
src/cli/network/: dane.rs  fetch.rs  keyserver.rs  lookup.rs  search.rs  wkd.rs
src/cli/packet/: armor.rs  dearmor.rs
src/cli/pki/: authenticate.rs  authorize.rs  certify.rs  identify.rs  link.rs  lookup.rs  path.rs  vouch.rs
src/cli/toolbox/: armor.rs  dearmor.rs  extract_cert.rs  keyring.rs  packet.rs  strip_userid.rs
src/cli/types/: cert_designator.rs  expiration.rs  key_designator.rs  paths.rs  profile.rs  signature_notations.rs  special_names.rs  time.rs  userid_designator.rs  version.rs
src/commands/: armor.rs  autocrypt.rs  cert.rs  certify.rs  config.rs  dearmor.rs  decrypt.rs  download.rs  dump.rs  encrypt.rs  export.rs  import.rs  inspect.rs  key.rs  keyring.rs  link.rs  mod.rs  net.rs  network.rs  packet.rs  pki.rs  revoke.rs  sign.rs  toolbox.rs  verify.rs  version.rs  wot.rs
src/commands/cert/: export.rs  import.rs  lint.rs
src/commands/config/: inspect.rs
src/commands/key/: adopt.rs  approvals.rs  attest_certifications.rs  bind.rs  delete.rs  expire.rs  export.rs  extract_cert.rs  generate.rs  import.rs  list.rs  password.rs  revoke.rs  rotate.rs  subkey.rs  userid.rs
src/commands/keyring/: lint.rs  linter.rs
src/commands/packet/: armor.rs  dearmor.rs  dump.rs
src/commands/pki/: authorize.rs  certify.rs  link.rs  output.rs  path.rs  vouch.rs
src/commands/sign/: merge_signatures.rs
src/commands/toolbox/: armor.rs  dearmor.rs  extract_cert.rs  keyring.rs  packet.rs  strip_userid.rs
src/commands/wot/: output.rs
src/common/: cert_designator.rs  delete.rs  expire.rs  file.rs  key.rs  password.rs  pki.rs  revoke.rs  ui.rs  userid.rs
src/common/key/: delete.rs  expire.rs  export.rs  password.rs
src/common/pki/: authenticate.rs  certify.rs  list.rs  output.rs  replay.rs
src/common/types/: mod.rs  userid_designator.rs
src/output/: hint.rs  import.rs  pluralize.rs  sanitize.rs  wrapping.rs
src/sq_cli/: armor.rs  autocrypt.rs  certify.rs  dane.rs  decrypt.rs  encrypt.rs  export.rs  import.rs  inspect.rs  key.rs  keyring.rs  keyserver.rs  link.rs  mod.rs  packet.rs  revoke.rs  sign.rs  types.rs  verify.rs  wkd.rs
subplot/: sq-subplot.rs
tests/: common.rs  integration.rs  sq-autocrypt.rs  sq-cert-lint.rs  sq-certify.rs  sq-decrypt.rs  sq-encrypt.rs  sq-export.rs  sq-import.rs  sq-key-adopt.rs  sq-key-approvals-update.rs  sq-key-attest-certifications.rs  sq-key-delete.rs  sq-key-expire.rs  sq-key-generate.rs  sq-key-import-export.rs  sq-key-password.rs  sq-key-revoke.rs  sq-key-subkey-delete.rs  sq-key-subkey-expire.rs  sq-key-subkey-password.rs  sq-key-subkey.rs  sq-key-userid.rs  sq-keyring-lint.rs  sq-keyring-linter.rs  sq-link.rs  sq-packet-decrypt.rs  sq-packet-dump.rs  sq-pki.rs  sq-revoke.rs  sq-sign.rs  sq-subplot.rs  sq-wot.rs
tests/data/autocrypt/: E43FF9D5-ABE5-42D4-852F-4692FB643B10@probier.email.eml  signed.eml
tests/data/cert-lint/: all-sha1-password-Foobar-priv.pgp  gnupg-rsa-normal-priv.pgp  multiple-passwords-priv.pgp  multiple-passwords-pub.pgp  sha1-cert-sha256-revocation-priv.pgp  sha1-cert-sha256-revocation-pub.pgp  sha1-encryption-subkey-priv.pgp  sha1-userid-revoked-priv.pgp  sha1-userid-revoked-pub.pgp  sha256-expired-sha1-live-priv.pgp  sha512-cert-sha1-revocation-priv.pgp
tests/data/examples/: README.md  alice-new-secret.pgp  alice-secret.pgp  alice.pgp.rev  bare.pgp  bob-secret.pgp  bob.pgp  bob.pgp.rev  ca-secret.pgp  ciphertext.pgp  document.pgp  document.sig  document.txt  juliet-secret.pgp  juliet.pgp  juliet.pgp.rev  message.pgp  romeo-secret.pgp  romeo.pgp
tests/data/keyring-lint/: all-sha1-password-Foobar-pub.pgp  no-backsig-priv.pgp  only-md5-priv.pgp  sha1-backsig-signing-subkey-priv.pgp  sha1-cert-sha1-revocation-priv.pgp  sha1-cert-sha1-revocation-pub.pgp  sha1-encryption-subkey-pub.pgp  sha1-expired-priv.pgp  sha1-userid-priv.pgp  sha1-userid-sha256-subkeys-pub.pgp  sha256-cert-sha256-revocation-pub.pgp  sha256-expired-sha1-live-pub.pgp  sha512-cert-sha1-revocation-pub.pgp
tests/data/keyring-linter/: authentication-subkey-priv.pgp  authentication-subkey-pub.pgp  gnupg-ecc-normal-priv.pgp  gnupg-ecc-normal-pub.pgp  gnupg-rsa-normal-pub.pgp  msg.sig  no-backsig-pub.pgp  only-md5-pub.pgp  sha1-authentication-subkey-priv.pgp  sha1-expired-pub.pgp  (+13 more)
tests/integration/: common.rs  sq_autocrypt.rs  sq_cert_export.rs  sq_cert_import.rs  sq_cert_lint.rs  sq_cert_list.rs  sq_certify.rs  sq_cli_version.rs  sq_decrypt.rs  sq_encrypt.rs  sq_export.rs  sq_key_adopt.rs  sq_key_approvals_list.rs  sq_key_approvals_update.rs  sq_key_delete.rs  sq_key_expire.rs  sq_key_generate.rs  sq_key_import_export.rs  sq_key_list.rs  sq_key_password.rs  sq_key_revoke.rs  sq_key_rotate.rs  sq_key_subkey.rs  sq_key_subkey_adopt.rs  sq_key_subkey_bind.rs  sq_key_subkey_delete.rs  sq_key_subkey_expire.rs  sq_key_subkey_export.rs  sq_key_subkey_password.rs  sq_key_userid.rs  sq_key_userid_revoke.rs  sq_keyring_filter.rs  sq_keyring_merge.rs  sq_packet_decrypt.rs  sq_packet_dump.rs  sq_pki.rs  sq_pki_authenticate.rs  sq_pki_authorize.rs  sq_pki_certify.rs  sq_pki_link.rs  (+14 more)
(+57 files in other folders)
