[package]
name = "sequoia-sq"
description = "Command-line frontends for Sequoia"
version = "0.37.0"
authors = [
    "Azul <azul@sequoia-pgp.org>",
    "Heiko Schaefer <heiko@schaefer.name>",
    "Igor Matuszewski <igor@sequoia-pgp.org>",
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Lars Wirzenius <liw@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
    "Nora Widdecke <nora@sequoia-pgp.org>",
    "Wiktor Kwapisiewicz <wiktor@sequoia-pgp.org>",
]
build = "build.rs"
documentation = "https://docs.rs/sequoia-sq"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia-sq"
readme = "README.md"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "command-line-utilities"]
license = "LGPL-2.0-or-later"
edition = "2021"
rust-version = "1.70"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia-sq" }
maintenance = { status = "actively-developed" }

[dependencies]
buffered-reader = { version = "1.3.1", default-features = false, features = ["compression"] }
dirs = "5"
dot-writer = { version = "0.1.3", optional = true }
sequoia-directories = "0.1"
sequoia-openpgp = { version = "1.18", default-features = false, features = ["compression"] }
sequoia-autocrypt = { version = "0.25", default-features = false }
sequoia-net = { version = "0.28", default-features = false }
sequoia-policy-config = "0.6"
anyhow = "1.0.18"
chrono = "0.4.10"
clap = { version = "4", features = ["derive", "env", "string", "wrap_help"] }
humantime = "2"
indicatif = "0.17"
itertools = ">=0.10, <0.13"
once_cell = "1.17"
sequoia-cert-store = "0.6.0"
sequoia-keystore = { version = "0.5" }
sequoia-wot = { version = "0.12", default-features = false }
tempfile = "3.1"
thiserror = "1"
tokio = { version = "1.13.1" }
rpassword = "7.0"
serde_json = "1.0.80"
serde = { version = "1.0.137", features = ["derive"] }
terminal_size = ">=0.2.6, <0.4"
termcolor = "1.2.0"
textwrap = ">=0.15, <0.17"

[build-dependencies]
anyhow = "1.0.18"
buffered-reader = { version = "1.0.0", default-features = false, features = ["compression"] }
clap = { version = "4", features = ["derive", "env", "string", "wrap_help"] }
clap_complete = "4"
chrono = "0.4.10"
dirs = "5"
roff = "0.2.1"
serde = { version = "1.0.137", features = ["derive"] }
sequoia-directories = "0.1"
sequoia-openpgp = { version = "1.17", default-features = false }
sequoia-net = { version = "0.28", default-features = false }
subplot-build = { version = ">=0.7, <0.10", optional = true }
textwrap = ">=0.15, <0.17"
cfg-if = "1"
terminal_size = ">=0.2.6, <0.4"

[dev-dependencies]
dircpy = "0.3"
subplotlib = ">=0.7, <0.10"
fehler = "1.0.0"
assert_cmd = "2"
predicates = ">=2, <4"
regex = "1"
libc = "0.2"

[[bin]]
name = "sq"
path = "src/main.rs"
bench = false

[features]
default = [
    "crypto-nettle",
    "dot-writer",
]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-openssl = ["sequoia-openpgp/crypto-openssl"]
crypto-botan = ["sequoia-openpgp/crypto-botan"]
crypto-botan2 = ["sequoia-openpgp/crypto-botan2"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
crypto-rust = ["sequoia-openpgp/crypto-rust"]
subplot = ["subplot-build"]

[profile.release]
debug = true
