[package]
name = "sequoia-sq"
description = "Command-line frontends for Sequoia"
version = "0.38.0"
authors = [
    "Azul <azul@sequoia-pgp.org>",
    "Heiko Schaefer <heiko@schaefer.name>",
    "Igor Matuszewski <igor@sequoia-pgp.org>",
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Lars Wirzenius <liw@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
    "Nora Widdecke <nora@sequoia-pgp.org>",
    "Wiktor Kwapisiewicz <wiktor@sequoia-pgp.org>",
]
build = "build.rs"
documentation = "https://docs.rs/sequoia-sq"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia-sq"
readme = "README.md"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "command-line-utilities"]
license = "LGPL-2.0-or-later"
edition = "2021"
rust-version = "1.75"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia-sq" }
maintenance = { status = "actively-developed" }

[dependencies]
buffered-reader = { version = "1.3.1", default-features = false, features = ["compression"] }
dirs = "5"
fs_extra = "1"
sequoia-directories = "0.1"
sequoia-openpgp = { version = "1.18", default-features = false, features = ["compression"] }
sequoia-autocrypt = { version = "0.25", default-features = false }
sequoia-net = { version = "0.28", default-features = false }
sequoia-policy-config = ">= 0.6, <0.8"
anyhow = "1.0.18"
chrono = "0.4.10"
clap = { version = "4", features = ["derive", "env", "string", "wrap_help"] }
humantime = "2"
indicatif = "0.17"
once_cell = "1.17"
reqwest = { version = "0.11.27", features = ["hickory-dns"] }
sequoia-cert-store = "0.6.0"
sequoia-keystore = { version = ">=0.5, <0.7" }
sequoia-wot = { version = "0.13", default-features = false }
tempfile = "3.1"
thiserror = "1"
tokio = { version = "1.13.1" }
rpassword = "7.0"
serde = { version = "1.0.137", features = ["derive"] }
subplotlib = { version = ">=0.7, <0.10", optional = true }
terminal_size = ">=0.2.6, <0.5"
termcolor = "1.2.0"
textwrap = ">=0.15, <0.17"
typenum = "1"

[build-dependencies]
anyhow = "1.0.18"
buffered-reader = { version = "1.0.0", default-features = false, features = ["compression"] }
clap = { version = "4", features = ["derive", "env", "string", "wrap_help"] }
clap_complete = "4"
chrono = "0.4.38"
dirs = "5"
roff = "0.2.1"
serde = { version = "1.0.137", features = ["derive"] }
sequoia-directories = "0.1"
sequoia-openpgp = { version = "1.21.1", default-features = false }
sequoia-net = { version = "0.28", default-features = false }
subplot-build = { version = ">=0.7, <0.10", optional = true }
textwrap = ">=0.15, <0.17"
typenum = "1"
cfg-if = "1"
terminal_size = ">=0.2.6, <0.5"

[dev-dependencies]
fehler = "1.0.0"
assert_cmd = "2"
predicates = ">=2, <4"
regex = "1"
libc = "0.2"

[[bin]]
name = "sq"
path = "src/main.rs"
bench = false

[[test]]
name = "sq-subplot"
path = "tests/sq-subplot.rs"
required-features = ["subplot"]

[features]
default = [
    "crypto-nettle",
]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-openssl = ["sequoia-openpgp/crypto-openssl"]
crypto-botan = ["sequoia-openpgp/crypto-botan"]
crypto-botan2 = ["sequoia-openpgp/crypto-botan2"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
crypto-rust = ["sequoia-openpgp/crypto-rust"]
subplot = ["subplot-build", "subplotlib"]

[profile.release]
debug = true

# The Rust Crypto crates are *very* slow when compiled without any
# optimizations.  Turn on some optimizations.
[profile.dev.package.aes]
opt-level = 2
[profile.dev.package.aes-gcm]
opt-level = 2
[profile.dev.package.block-padding]
opt-level = 2
[profile.dev.package.blowfish]
opt-level = 2
[profile.dev.package.camellia]
opt-level = 2
[profile.dev.package.cast5]
opt-level = 2
[profile.dev.package.cipher]
opt-level = 2
[profile.dev.package.cfb-mode]
opt-level = 2
[profile.dev.package.des]
opt-level = 2
[profile.dev.package.digest]
opt-level = 2
[profile.dev.package.dsa]
opt-level = 2
[profile.dev.package.eax]
opt-level = 2
[profile.dev.package.ecb]
opt-level = 2
[profile.dev.package.ecdsa]
opt-level = 2
[profile.dev.package.ed25519]
opt-level = 2
[profile.dev.package.ed25519-dalek]
opt-level = 2
[profile.dev.package.idea]
opt-level = 2
[profile.dev.package.md-5]
opt-level = 2
[profile.dev.package.num-bigint-dig]
opt-level = 2
[profile.dev.package.p256]
opt-level = 2
[profile.dev.package.p384]
opt-level = 2
[profile.dev.package.p521]
opt-level = 2
[profile.dev.package.ripemd]
opt-level = 2
[profile.dev.package.rsa]
opt-level = 2
[profile.dev.package.sha2]
opt-level = 2
[profile.dev.package.twofish]
opt-level = 2
[profile.dev.package.x25519-dalek]
opt-level = 2
