[package]
name = "sequoia-sq"
description = "Command-line frontends for Sequoia"
version = "1.3.1"
authors = [
    "Azul <azul@sequoia-pgp.org>",
    "Heiko Schaefer <heiko@schaefer.name>",
    "Igor Matuszewski <igor@sequoia-pgp.org>",
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Lars Wirzenius <liw@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
    "Nora Widdecke <nora@sequoia-pgp.org>",
    "Wiktor Kwapisiewicz <wiktor@sequoia-pgp.org>",
]
build = "build.rs"
documentation = "https://docs.rs/sequoia-sq"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia-sq"
readme = "README.md"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "command-line-utilities"]
license = "LGPL-2.0-or-later"
edition = "2021"
rust-version = "1.79"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia-sq" }
maintenance = { status = "actively-developed" }

[dependencies]
aho-corasick = "1"
buffered-reader = { version = "1.4", default-features = false, features = ["compression"] }
dirs = "5"
filetime = "0.2"
fs_extra = "1"
sequoia-directories = "0.1"
sequoia-openpgp = { version = "2", default-features = false, features = ["compression"] }
sequoia-autocrypt = { version = "0.26", default-features = false }
sequoia-net = { version = "0.30", default-features = false }
sequoia-policy-config = "0.8"
anyhow = "1.0.18"
chrono = "0.4.10"
clap = { version = "4", features = ["derive", "env", "string", "wrap_help"] }
clap_lex = { version = "0.7", default-features = false }
futures-util = "0.3"
gethostname = { version = ">=0.4, <0.6" }
humantime = "2"
indicatif = "0.17"
once_cell = "1.17"
reqwest = { version = ">=0.12, <0.13", features = ["hickory-dns", "stream"] }
sequoia-cert-store = { version = "0.7", default-features = false }
sequoia-ipc = { version = "0.36", default-features = false }
sequoia-keystore = { version = "0.7" }
sequoia-wot = { version = "0.14", default-features = false }
tempfile = "3.1"
thiserror = { version = ">=1, <3" }
tokio = { version = "1.13.1" }
toml_edit = { version = "0.22", default-features = false, features = ["display", "parse"] }
regex = "1"
rpassword = "7.0"
rusqlite = ">=0.31, <0.33"
serde = { version = "1.0.137", features = ["derive"] }
terminal_size = ">=0.2.6, <0.5"
termcolor = "1.2.0"
textwrap = { version = ">=0.15, <0.17", default-features = false, features = ["smawk", "unicode-width"] }
typenum = "1"

# This is for subplot only.  If you don't enable the subplot feature,
# feel free to patch it out.
subplotlib = { version = ">=0.11, <0.13", optional = true }
culpa = { version = "1", optional = true }

[build-dependencies]
anyhow = "1.0.18"
buffered-reader = { version = "1.4", default-features = false, features = ["compression"] }
clap = { version = "4", features = ["derive", "env", "string", "wrap_help"] }
clap_complete = "4"
clap_lex = { version = "0.7", default-features = false }
chrono = "0.4.38"
dirs = "5"
roff = "0.2.1"
serde = { version = "1.0.137", features = ["derive"] }
sequoia-directories = "0.1"
sequoia-man = "0.3"
sequoia-openpgp = { version = "2", default-features = false, features = ["compression"] }
sequoia-net = { version = "0.30", default-features = false }
textwrap = ">=0.15, <0.17"
typenum = "1"
cfg-if = "1"
terminal_size = ">=0.2.6, <0.5"

# This is for subplot only.  If you don't enable the subplot feature,
# feel free to patch it out.
subplot-build = { version = ">=0.11, <0.13", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = ">=2, <4"
regex = "1"
libc = "0.2"

[[bin]]
name = "sq"
path = "src/main.rs"
bench = false

[[test]]
name = "sq-subplot"
path = "tests/sq-subplot.rs"
required-features = ["subplot"]

[features]
default = [
    "crypto-nettle",
]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-openssl = ["sequoia-openpgp/crypto-openssl"]
crypto-botan = ["sequoia-openpgp/crypto-botan"]
crypto-botan2 = ["sequoia-openpgp/crypto-botan2"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
crypto-rust = ["sequoia-openpgp/crypto-rust"]
subplot = ["culpa", "subplot-build", "subplotlib"]

[profile.release]
debug = true

# The Rust Crypto crates are *very* slow when compiled without any
# optimizations.  Turn on some optimizations.
[profile.dev.package.aes]
opt-level = 2
[profile.dev.package.aes-gcm]
opt-level = 2
[profile.dev.package.block-padding]
opt-level = 2
[profile.dev.package.blowfish]
opt-level = 2
[profile.dev.package.camellia]
opt-level = 2
[profile.dev.package.cast5]
opt-level = 2
[profile.dev.package.cipher]
opt-level = 2
[profile.dev.package.cfb-mode]
opt-level = 2
[profile.dev.package.des]
opt-level = 2
[profile.dev.package.digest]
opt-level = 2
[profile.dev.package.dsa]
opt-level = 2
[profile.dev.package.eax]
opt-level = 2
[profile.dev.package.ecb]
opt-level = 2
[profile.dev.package.ecdsa]
opt-level = 2
[profile.dev.package.ed25519]
opt-level = 2
[profile.dev.package.ed25519-dalek]
opt-level = 2
[profile.dev.package.idea]
opt-level = 2
[profile.dev.package.md-5]
opt-level = 2
[profile.dev.package.num-bigint-dig]
opt-level = 2
[profile.dev.package.p256]
opt-level = 2
[profile.dev.package.p384]
opt-level = 2
[profile.dev.package.p521]
opt-level = 2
[profile.dev.package.ripemd]
opt-level = 2
[profile.dev.package.rsa]
opt-level = 2
[profile.dev.package.sha2]
opt-level = 2
[profile.dev.package.twofish]
opt-level = 2
[profile.dev.package.x25519-dalek]
opt-level = 2
